--- a/虾小姐的小故事.html
+++ b/虾小姐的小故事.html
@@ -242,8 +242,8 @@ end</tw-passagedata><tw-passagedata pid="26" name="下坠" tags="" position="650
 - 她每否认一次谣言，就有身体部位透明化  
 
 **关键选择**：  
-- [[吃下灰蛾获得篡改记忆能力]] ➔ 反向编写霸凌者人生  
-- [[点燃日记引发信息火灾 ]]➔ 所有参与者记忆同步灼烧  
+&#39;&#39;- [[吃下灰蛾获得篡改记忆能力]]&#39;&#39; ➔ 反向编写霸凌者人生  
+&#39;&#39;- [[点燃日记引发信息火灾 ]]&#39;&#39;➔ 所有参与者记忆同步灼烧  
 
 ---
 </tw-passagedata><tw-passagedata pid="29" name="砸碎C学生的手机头颅" tags="" position="775,1175" size="100,100">手机头颅爆炸后，碎片形成无数监控镜头。えびさわ被上传到「全校共赏云端」，每个视角都在扭曲她的身体：  
@@ -279,7 +279,32 @@ end</tw-passagedata><tw-passagedata pid="26" name="下坠" tags="" position="650
 3. **[[给霸凌者植入被爱记忆]]**（结局：饲育女神）  
 
 ---
-</tw-passagedata><tw-passagedata pid="33" name="点燃日记引发信息火灾 " tags="" position="525,1300" size="100,100"></tw-passagedata><tw-passagedata pid="34" name="主动上传更极端影像" tags="" position="775,1425" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="给所有镜头安装病毒滤镜" tags="" position="900,1425" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="无限篡改直至世界崩坏" tags="" position="650,1425" size="100,100"> - 操场变成代码瀑布，学生们在二进制河流里捕捞点赞  
+</tw-passagedata><tw-passagedata pid="33" name="点燃日记引发信息火灾 " tags="" position="525,1300" size="100,100">えびさわ点燃日记的刹那，灰蛾幼虫在火焰中爆裂成数据流。整座学校化作社交平台界面，火焰呈现为删除键图标，舔舐着所有与谣言相关的记忆载体。  
+
+---
+
+- 教室墙壁变成滚动弹幕墙，每条谣言都标注着「转发量」血条  
+- 霸凌者们的身体开始像素化，每被火焰吞噬1%血量就尖叫着吐出原始记忆片段  
+- 天空下起灰烬雨，落地后凝结成「404 ERROR」地砖 
+
+- えびさわ的校服口袋自动生成消防栓，喷出的却是草莓味巧克力酱  
+- 广播系统播放篡改版消防警报：「请有序传播！请有序死亡！」  
+- 火焰中浮现清洁工的脸，她的拖把正在焚烧服务器机房  
+
+---
+**异变现象**  
+- 被焚烧的谣言残渣聚合成「信息丧尸」：  
+  - 丧尸A：眼球是滚动热搜榜，喉咙卡着「求真相」的评论骨刺  
+  - 丧尸B：脊椎由点赞数堆砌，心脏部位嵌着「已取证」的警方封条  
+  - 丧尸C：内脏是数据回收站，漂浮着未彻底删除的道歉私信  
+
+**生存选择**  
+&#39;&#39;[[用巧克力酱浇灭火焰]]  
+ [[引导火焰焚烧整座校园]] 
+[[跳入核心服务器]]  
+&#39;&#39;
+---
+</tw-passagedata><tw-passagedata pid="34" name="主动上传更极端影像" tags="" position="775,1425" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="给所有镜头安装病毒滤镜" tags="" position="900,1425" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="无限篡改直至世界崩坏" tags="" position="650,1425" size="100,100"> - 操场变成代码瀑布，学生们在二进制河流里捕捞点赞  
 - えびさわ端坐于谎言王座，脚边堆满长满霉斑的「事实尸骸」  
 - 最后篡改项：「我从未存在过」  
 
@@ -366,7 +391,483 @@ end</tw-passagedata><tw-passagedata pid="46" name="扭曲的观众" tags="" posi
 1. **[[撕下窗帘裹住身体逃向玄关]]**  
 2. **[[用染血的手机拍摄现场上传直播]]**
 3. **[[冲进浴室试图洗掉血迹]]**
-</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="47" name="用巧克力酱浇灭火焰" tags="" position="400,1425" size="100,100">えびさわ拧开校服口袋生成的巧克力消防栓，粉红黏液如血瀑般喷涌。火焰与糖浆碰撞的瞬间，整座数据化校园开始发酵——墙壁膨胀成蛋糕胚，地板渗出奶油，燃烧的弹幕文字融化成糖霜涂层。  
+
+---
+
+#### **荒诞演化**  
+1. **丧尸异变**  
+   - 热搜眼球丧尸的瞳孔变成马卡龙色，开始背诵《甜品制作指南》  
+   - 点赞脊椎丧尸的骨节脱落，重组为「巧克力鉴赏协会」徽章  
+   - 回收站内脏丧尸吐出被咀嚼过的记忆胶囊，外壳裹着榛果碎  
+
+2. **空间重构**  
+   - 操场化作巨型熔岩蛋糕，霸凌者们被困在沸腾的巧克力浆中  
+   - 教学楼变成翻糖雕塑群，每个教室门牌标注着不同甜度的谎言等级  
+
+3. **代价显现**  
+   - えびさわ的右手被糖浆腐蚀，皮肤呈现焦糖裂纹（触碰任何物体都会留下黏腻指印）  
+   - 呼吸时吐出可可粉烟雾，其中飘浮着被净化的记忆残片  
+
+---
+
+### **关键抉择**  
+&#39;&#39;[[收集记忆胶囊修复时间线]]&#39;&#39;
+&#39;&#39;[[建立巧克力乌托邦]] &#39;&#39;
+&#39;&#39;[[让丧尸吞噬自己完成净化]]&#39;&#39;
+
+
+---
+</tw-passagedata><tw-passagedata pid="48" name="引导火焰焚烧整座校园" tags="" position="400,1550" size="100,100">えびさわ夺过清洁工的漂白剂，浇在谣言火焰上。火焰骤然异变成青紫色，沿着弹幕弹道飞窜，整座校园开始坍缩成推特时间轴的模样。  
+
+---
+
+#### **第一阶段：燃烧的社交图谱**  
+**视觉异变**  
+- 教室化作六边形蜂巢，每个格子里囚禁着不同时期的霸凌记忆  
+- 火焰舔舐过的地面浮出点赞形状的墓碑，碑文是被焚烧的谣言原文  
+- 图书馆书架上的《青少年心理健康指南》自动翻页，文字重组为《霸凌经济学：流量变现手册》  
+
+**荒诞事件链**  
+- 火焰中诞生「热搜凤凰」，每根尾羽都是えびさわ被偷拍的片段  
+- 霸凌者A的右手进化成消防栓，喷出的却是助燃剂  
+- 清洁工的拖把进化为火焰指挥棒，她开始癫狂地演奏柴可夫斯基的《1812序曲》  
+
+---
+
+#### **第二阶段：数据灰烬中的真相菌丝**  
+**核心解谜**  
+えびさわ发现火焰无法焚毁三处特殊节点：  
+1. **女厕第三间隔板**：刻着「婊子去死」的涂鸦下，藏着霸凌者B的孕检报告（伪造证据的原罪）  
+2. **体育器材室哑铃**：内部中空，塞满えびさわ被撕碎的日记页，混着清洁工写的安慰便签  
+3. **校长室保险柜**：锁着十年前的校园暴力录像带，主角竟是如今的训导主任  
+
+**火焰抉择**  
+1. **[[焚烧孕检报告]]**  
+2. **[[点燃日记灰烬]]**  
+3. **[[熔毁保险柜]]**  
+   
+
+---
+</tw-passagedata><tw-passagedata pid="49" name="跳入核心服务器" tags="" position="550,1925" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="收集记忆胶囊修复时间线" tags="" position="275,1550" size="100,100">（每颗胶囊对应一个超现实场景）  
+
+[[胶囊A]]
+ 
+[[胶囊B]]
+ 
+[[胶囊C]]  
+ 
+
+---</tw-passagedata><tw-passagedata pid="51" name="建立巧克力乌托邦" tags="" position="275,1675" size="100,100">当えびさわ选择用巧克力酱浇筑霸凌者时，她未曾料到那些凝固的糖浆会自主增殖。乌托邦建成三年后，甜品店的玻璃橱窗上倒映出诡异的画面——所有「永生店员」的眼球都变成了跳动的可可豆，他们的微笑弧度被糖丝精准控制在32.7度。
+
+---
+
+#### **乌托邦的暗面**  
+1. **甜蜜流水线**  
+   - 被糖化的霸凌者们在操作台上永生劳作，皮肤渗出糖浆填补机械损耗  
+   - 他们制作的「赎罪巧克力」内含纳米芯片，食用者会产生被霸凌者的记忆闪回  
+   - 清洁工的裱花嘴审判演变成基因改造：在犯人额头刻下「我有罪」的顾客会获得七折优惠  
+
+2. **数据丧尸的再利用**  
+   - 未被完全净化的丧尸关在后厨，啃食过期订单数据维持运转  
+   - 丧尸A的眼球热搜榜滚动播放：「网红店打卡指南：如何拍出最具救赎感的忏悔照」  
+   - 丧尸C的回收站内脏吐出游客的差评，被烘焙成「黑巧克力记忆砖」砌墙  
+
+3. **えびさわ的异化**  
+   - 她的褐色疤痕增生为树状纹路，每天清晨从枝桠滴落「原谅蜜露」  
+   - 喉咙深处寄生着微型糖化法庭，每当游客质疑乌托邦，就会自动播放霸凌者A被浇筑的立体投影  
+
+---
+
+### **崩坏前兆**  
+1. **觉醒的糖人**  
+   - 某个店员突然捏碎自己的巧克力手掌，断口处喷出二十年前的报纸碎片：  
+     - 「校园暴力受害者母亲跳楼」  
+     - 「涉事教师调任重点中学」  
+   - 他用糖浆在地面书写：「甜蜜是最高效的遗忘剂」  
+
+2. **清洁工的腐烂**  
+   - 她审判用的裱花嘴开始生锈，每次雕刻赎罪印记都会漏出腐臭糖浆  
+   - 深夜监控拍到她在仓库偷吃「黑巧克力记忆砖」，脸颊爬满霉斑状的数据病毒  
+
+3. **游客的变异**  
+   - 连续食用赎罪巧克力七天的顾客，舌苔上长出微型弹幕键盘  
+   - 他们开始无意识地在社交媒体发布：「暴力就该被甜蜜净化」  
+   - 点赞数最高者获得えびさわ的疤痕同款纹身贴，撕下时连带扯掉皮肤  
+
+---
+
+### **终极选择**  
+1. **[[升级甜蜜暴政]]**  
+2. **[[引爆糖化核心]]**  
+3. **[[自我献祭为新材料]]**  
+  
+
+---
+
+</tw-passagedata><tw-passagedata pid="52" name="让丧尸吞噬自己完成净化" tags="" position="275,1800" size="100,100">えびさわ主动走入丧尸群，任由数据化的尖牙刺穿喉咙。在意识消散前，她将最后一块巧克力塞进热搜丧尸的眼球插座。  
+
+---
+
+#### **第一阶段：反向寄生**  
+**进化特征**  
+- 丧尸的硅基病毒与巧克力中的可可碱发生突变，えびさわ的神经元在每具丧尸体内重组  
+- 所有被感染者出现以下变异：  
+  - **变异1**：指尖长出USB接口，触碰他人时自动上传被霸凌的记忆  
+  - **变异2**：声带振动频率锁定为清洁工哼唱的《糖果仙子舞曲》  
+  - **变异3**：胃酸转化为数据清洗液，呕吐物能腐蚀电子证据  
+
+**荒诞事件**  
+- 霸凌者A试图删除旧帖时，键盘突然咬住手指，强制播放他小学时被体操教练虐待的监控  
+- 造谣网站服务器长出肉质防火墙，每拦截一次攻击就分泌出混着血丝的巧克力奶  
+- 城市上空出现えびさわ的巨脸投影，睫毛是无数条网线，正直播丧尸们啃食硬盘的ASMR  
+
+---
+
+#### **第二阶段：人机合体**  
+**终极形态**  
+えびさわ的主意识寄生于市政厅超级计算机，发现更深层真相：  
+- 清洁工曾是军方「痛苦转化能源」项目的实验体，她的巧克力含有神经改造纳米机器人  
+- 丧尸病毒原型竟是清洁工血液中的抗体，二十年前就该被销毁  
+
+**世界重构**  
+- 柏油路变成生物电路板，路灯是巨型注射器向天空输送忏悔数据  
+- 所有校园监控录像自动替换为平行时空画面：  
+  - 在未被霸凌的时间线，えびさわ成为甜点师，清洁工开孤儿院  
+  - 在彻底黑化的时间线，她化身暗网女王，用巧克力控制政要  
+
+---
+
+
+**终幕画面**  
+えびさわ从培养舱苏醒，发现所谓末世全是VR测试——  
+- 清洁工是项目主管，试图用虚拟暴力筛选「人类补完体」  
+- 所有霸凌者都是AI演员，他们的恐惧数据正被制成镇痛剂  
+- 真正的巧克力藏在培养液里，包装纸印着：「第42代实验体：生存率0.7%」  
+
+她咬碎玻璃舱，在现实世界的实验室地板上爬行，身后拖出血迹与巧克力残渣。走廊尽头，第43代实验体少女正被推入舱室，手腕系着清洁工送的粉色丝带。  
+
+---
+
+end</tw-passagedata><tw-passagedata pid="53" name="胶囊A" tags="" position="150,1675" size="100,100"> 霸凌者A举着裁纸刀逼近，刀刃却是巧克力制成。  
+  「划破你的脸就给我钱？」他舔着刀刃突然崩溃，「我爸说考不进前十就打断我的手！」  
+  *选择：将刀刃重铸为钢笔/塞入他嘴里*  
+  
+&#39;&#39;  [[钢笔]]
+  [[塞入嘴里]]&#39;&#39;</tw-passagedata><tw-passagedata pid="54" name="胶囊B" tags="" position="150,1800" size="100,100"> 被篡改的裸照在投影仪上播放，观众席的えびさわ突然站起：  
+ 
+  「这是我为美术课准备的《创伤解剖图》。」
+  
+  所有窃笑者开始呕吐颜料，教室变成抽象派画廊。  
+  
+ &#39;&#39; [[颜料刑场]]&#39;&#39;
+  </tw-passagedata><tw-passagedata pid="55" name="胶囊C" tags="" position="275,1925" size="100,100">  清洁工在焚烧炉前犹豫，手里攥着えびさわ被撕碎的日记。  
+  火舌即将吞噬纸页时，她突然抽出夹层里的全家福——  
+  照片背面写着：「妈妈今天化疗掉光了头发，我要成为让她骄傲的光。」 
+  
+&#39;&#39;[  [[余烬基因]]]&#39;&#39;</tw-passagedata><tw-passagedata pid="56" name="钢笔" tags="" position="25,1800" size="100,100">钢笔成型的刹那，笔尖刺入霸凌者A的掌心，吸食他的血液化为墨水
+
+他被迫开始「赎罪创作」，但每写下一行忏悔，皮肤就脱落一片化作书页
+
+&#39;&#39;异变现象：&#39;&#39;
+
+钢笔自动续写他的黑暗潜意识：「那天撕她校服时，我闻到了和妈妈被家暴时一样的血腥味——真恶心。」
+
+文字在社交媒体病毒式传播，网友集体判决「这种人不配被共情」
+
+他的父亲突然自杀，遗书正是钢笔自动书写的《完美受害者指南》
+
+
+
+
+&#39;&#39;救赎的诅咒&#39;&#39;
+
+当他的自传完成时，书本突然活化成黑色触手将他拖入纸页
+
+&#39;&#39;[[最终场景]]&#39;&#39;
+
+</tw-passagedata><tw-passagedata pid="57" name="塞入嘴里" tags="" position="150,1925" size="100,100">巧克力在霸凌者A口腔爆开的瞬间，他的声带被糖浆黏合
+
+&#39;&#39;异变现象：&#39;&#39;
+
+身体从内部开始糖化，内脏结晶成透明糖果（可清晰看见心脏嵌着えびさわ被撕碎的照片）
+
+社交媒体同步推送「霸凌者甜蜜死亡」的直播，点赞数决定糖化速度
+
+他的父亲在镜头前大笑：「废物连当反派都不彻底！」
+
+&#39;&#39;报复的代价&#39;&#39;
+
+当糖化完成时，他的雕像成为网红打卡点
+
+游客用锤子敲碎「罪恶部位」带回家（敲下左手的人当晚梦见自己掌掴母亲）
+
+えびさわ的焦糖右手开始生长糖果倒刺，触碰他人会强制共感记忆
+
+&#39;&#39;[[糖衣处刑的悖论]]&#39;&#39;
+
+</tw-passagedata><tw-passagedata pid="58" name="最终场景" tags="" position="25,1925" size="100,100">他在文字深渊中永恒坠落，每一层都是曾被自己霸凌者的记忆回廊
+
+えびさわ的钢笔开始自动撰写新故事，主角变成另一个举着巧克力刀的少年
+
+end</tw-passagedata><tw-passagedata pid="59" name="糖衣处刑的悖论" tags="" position="150,2050" size="100,100">雕像底座浮现血字：「你们敲碎的每一块糖，都在喂养新的暴力」
+
+清洁工默默收集糖块，将它们投入焚烧炉炼成黑色巧克力
+
+end</tw-passagedata><tw-passagedata pid="60" name="颜料刑场" tags="" position="275,2050" size="100,100">当えびさわ说出「创伤解剖图」的瞬间，投影仪突然喷出粘稠的丙烯液体。被篡改的裸照在颜料浸润中扭曲变形，最终定格为一幅《子宫中的撒旦》——这正是她三个月前被美术老师撕毁的参赛作品。  
+
+---
+
+#### **异变升级**  
+1. **呕吐物的真相**  
+   - 窃笑者呕吐出的颜料在空中凝结成血字弹幕：  
+     - 「胸围P大了5cm」  
+     - 「腰臀比调成0.7」  
+     - 「腋下阴影加深三档」  
+   - 每滴颜料落地后都长出牙齿，啃食呕吐者的脚踝  
+
+2. **画廊的审判**  
+   - 教室变成的抽象派画廊中，所有画作突然活化：  
+     - 蒙克《呐喊》的脸替换成霸凌者B，正在被自己散布的谣言铁丝勒颈  
+     - 毕加索《格尔尼卡》的马头变成手机摄像头，瞳孔闪烁直播打赏特效  
+     - 草间弥生的波点南瓜张开巨口，吞噬那些试图用手机拍摄呕吐现场的学生  
+
+3. **えびさわ的异化**  
+   - 她的校服逐渐溶解，露出皮肤下的肌肉纹理——每一束肌纤维都是被篡改的谣言文字  
+   - 脊椎生长出画架支架，后颈钉着评分牌：「构图7.2分/道德0分」  
+
+---
+
+### **死亡选择**  
+1. **[[将评分牌插入投影仪]]**  
+   
+2. **[[喝下颜料呕吐物]]**  
+  
+3. **[[撕下肌纤维谣言织成画布]]**  
+
+
+(text-colour:red)[&#39;&#39;[[拒绝腐烂]]&#39;&#39;]</tw-passagedata><tw-passagedata pid="61" name="将评分牌插入投影仪" tags="" position="275,2175" size="100,100"> 所有艺术史名画开始重绘：  
+     - 《创世纪》中上帝的手指变成修图软件的液化工具  
+     - 《戴珍珠耳环的少女》珍珠里浮现三千条荡妇羞辱弹幕  
+  (text-colour:red)[ - えびさわ成为活体画布，每天凌晨新增一道来自全球网友的笔触  ]
+
+
+[[颜料刑场]]</tw-passagedata><tw-passagedata pid="62" name="喝下颜料呕吐物" tags="" position="400,2175" size="100,100"> - 获得篡改记忆的能力：  
+     - 将霸凌者B的童年替换成AV女优剪辑  
+     - 把美术老师妻子P进性虐待油画  
+ (text-colour:red)[- 代价：视网膜永久显示色相饱和度曲线，看所有人都是血肉马赛克  ]
+
+
+[[颜料刑场]]</tw-passagedata><tw-passagedata pid="63" name="撕下肌纤维谣言织成画布" tags="" position="150,2175" size="100,100">   - 创作出《谣言解剖课》系列：  
+     - 第一幅：放大十万倍的「援交」二字，墨水里游动着性病病原体  
+     - 第二幅：用月经血临摹《最后的晚餐》， Judas盘子里盛着被删除的道歉信  
+ (text-colour:red)[  - 代价：每幅画售出后，购买者家庭必有一人遭遇同类型暴力  ]
+
+---
+
+[[颜料刑场]]</tw-passagedata><tw-passagedata pid="64" name="拒绝腐烂" tags="" position="275,2300" size="100,100">当えびさわ完成第13幅画时，画廊突然坍缩成子宫形态。评委席坐着二十三个不同年龄的她：  
+- 5岁举着蜡笔画：「妈妈看我画的公主！」  
+- 14岁攥着被撕碎的素描：「人体结构不合格？那您的手为什么放在这里？」  
+- 17岁裸露的肌肉纤维如荆棘绽放：「现在，轮到你们当模特了。」  
+
+所有曾参与篡改者被钉上画框，颜料从他们眼眶涌出，自动续写《暴力美学史》末章。えびさわ用评分牌割开子宫壁，爬出的瞬间化作灰白色雕塑——  
+
+
+
+(text-colour:red)[**基座铭文：**  
+**「当我允许你们凝视伤口，  
+这凝视本身就成了新伤。  
+现在，  
+请欣赏你们亲手浇筑的艺术品：  
+一具拒绝腐烂的  
+活体耻辱柱。」**  ]
+
+---
+
+
+end</tw-passagedata><tw-passagedata pid="65" name="余烬基因" tags="" position="400,2050" size="100,100">清洁工的手指在火舌中碳化剥落，露出金属骨骼——那是二十年前她为保护女儿植入的义体。焚烧炉的火焰突然凝固成DNA链形态，每一簇火苗都是她人生中被焚毁的秘密。  
+
+---
+
+#### **记忆显影**  
+1. **全家福的异变**  
+   - 照片中化疗的母亲突然转头对清洁工说话：「你又要重复我的路吗？」  
+   - えびさわ的脸褪色成空白，浮现清洁工女儿的面孔——那是十年前因校园暴力自杀的少女  
+   - 照片边缘燃烧生成新画面：清洁工深夜篡改女儿遗书，将「他们逼死我」改为「意外失足」  
+
+2. **焚烧炉的真相**  
+   - 炉膛内壁刻满正字，每个笔画都是她销毁的暴力证据：  
+     - 带血的内衣（女儿被强迫拍摄写真的道具）  
+     - 三十七张匿名恐吓信（笔迹与现任校长重叠）  
+     - 半枚指纹（属于正给えびさわP图的摄影部男生父亲）  
+
+3. **火舌的审判**  
+   - 火焰DNA链突然刺入清洁工脊椎，强制播放她最深的耻辱：  
+     - 女儿死后第三年，她把霸凌者之一推下实验楼，却在监控录像上涂抹巧克力伪造自杀  
+     - 昨夜她本可阻止えびさわ的日记被偷，却故意调开巡逻  
+
+---
+
+### **终极选择**  
+1. **[[让火焰吞噬照片]]**  
+2. **[[将照片吞入体内]]**  
+3. **[[用义指撕开DNA火链]]**  
+ 
+
+---
+
+(text-colour:red)[&#39;&#39;[[忏悔]]&#39;&#39;]</tw-passagedata><tw-passagedata pid="66" name="让火焰吞噬照片" tags="" position="525,2175" size="100,100">  - 女儿的面孔从所有受害者记忆中消失，えびさわ日记里的「妈妈」自动替换为清洁工  
+(text-colour:red)[   - 代价：焚烧炉化作子宫将清洁工回收，她将在每届学生中「生育」出替死鬼  ]
+
+end</tw-passagedata><tw-passagedata pid="67" name="将照片吞入体内" tags="" position="400,2300" size="100,100"> - 金属骨骼生长出血肉，化疗母亲的幻影接管身体  
+  (text-colour:red)[ - 代价：所有霸凌事件自动修正为「受害者自我堕落」，清洁工成为活体因果律武器 ] 
+  
+  end</tw-passagedata><tw-passagedata pid="68" name="用义指撕开DNA火链" tags="" position="525,2300" size="100,100">  - 释放历代被焚烧的冤魂，包括自己女儿  
+(text-colour:red)[   - 代价：女儿的灵魂拒绝相认，化作数据丧尸啃食她的机械心脏  ]
+
+end</tw-passagedata><tw-passagedata pid="69" name="忏悔" tags="" position="400,2425" size="100,100">清洁工将えびさわ的日记残页与女儿遗书拼合，火焰中浮现双螺旋祭坛。她割开胸腔，用机械心脏的润滑油写下：  
+
+(text-colour:red)[**「请将我的罪孽编码成遗传信息，  
+让所有施暴者胎内自带焚烧炉——  
+当他们伤害他人时，  
+就点燃自己的脐带。」**  ]
+
+祭坛爆裂，所有曾参与暴力者肚脐喷出蓝色火苗。えびさわ在火焰中看见：  
+- 清洁工的女儿在冥河对岸微笑，头顶悬浮着(text-colour:red)[「原谅不可原谅之人是另一种暴力」]的霓虹灯牌  
+- 自己的全家福被烙在清洁工金属骨骼上，化疗母亲的眼眶里长出两株可可苗  
+
+---
+
+end</tw-passagedata><tw-passagedata pid="70" name="升级甜蜜暴政" tags="" position="400,1925" size="100,100"> 给所有店员植入「快乐杏仁核」，强制分泌多巴胺中和痛苦记忆  
+   - 代价：えびさわ的疤痕树结出毒果，每个果实都是被糖衣包裹的未出生胎儿  
+   
+ &#39;&#39;  [[甜蜜子宫]]&#39;&#39;</tw-passagedata><tw-passagedata pid="71" name="引爆糖化核心" tags="" position="150,2300" size="100,100">   - 释放后厨丧尸啃食乌托邦，所有甜蜜造物回归原始暴力数据流  
+   (text-colour:red)[- 代价：清洁工在爆炸中与女儿的记忆永久融合，成为游荡在Wi-Fi信号里的电子怨灵  ]
+   
+   end</tw-passagedata><tw-passagedata pid="72" name="自我献祭为新材料" tags="" position="275,2425" size="100,100"> - 跳入巧克力熔炉，身体分解成「苦味因子」中和甜腻  
+(text-colour:red)[   - 代价：新诞生的店员全部自带双重人格，白天微笑服务，夜晚用糖浆书写死亡威胁  ]</tw-passagedata><tw-passagedata pid="73" name="甜蜜子宫" tags="" position="525,2050" size="100,100">当「快乐杏仁核」植入店员颅内的瞬间，他们的耳道涌出粉红色神经触须，在空中编织成巨大的蜂巢网络。えびさわ的疤痕树以每分钟3厘米的速度生长，树冠笼罩整个乌托邦，毒果在月光下脉动如胎儿心跳。
+
+---
+
+#### **甜蜜地狱三重奏**  
+1. **蜂巢意识的代价**  
+   - 店员们共享甜蜜幻觉：  
+     - 被浇筑成巧克力雕像的霸凌者A，在他们脑中永远重复着「对不起」的口型  
+     - 清洁工腐烂的脸被美化成慈母滤镜，霉斑变成卡通贴纸  
+   - **副作用**：任何试图回忆真实暴力场景的店员，鼻腔会喷出带血丝的可可粉  
+
+2. **毒果的诞生仪式**  
+   - 每颗毒果成熟时自动播放全息影像：  
+     - 未出生胎儿的梦境片段：被P图的えびさわ在子宫里涂改验孕报告  
+     - 糖衣剥落后露出金属胎盘，刻着「快乐基因编号HB-114514」  
+   - 食用毒果的游客会产生妊娠反应，肚脐长出连接疤痕树的糖质脐带  
+
+3. **えびさわ的蜂后化**  
+   - 疤痕树根系刺入她的脊椎，树液替换血液：  
+     - 左眼变成蜂巢复眼，实时监控所有店员的愉悦指数  
+     - 声带退化为信息素腺体，只能通过释放甜蜜素下达指令  
+   - 她每晚用触须在树皮刻写：「疼痛是过时的程序」
+
+---
+
+### **崩坏进行时**  
+1. **胎儿觉醒事件**  
+   - 某颗毒果提前裂开，爬出半透明糖婴：  
+     - 手掌镶嵌「快乐杏仁核」残片，触碰之物会强制微笑  
+     - 哭啼声解除了三名店员的蜂巢链接，他们想起自己曾将えびさわ锁进厕所隔间  
+   - 清洁工偷偷喂养糖婴，霉斑手臂上浮现女儿生前最爱的草莓纹身  
+
+2. **蜂巢暴动**  
+   - 过度分泌多巴胺导致店员杏仁核爆炸，头颅炸开的瞬间：  
+     - 飞溅的脑浆化作糖针，刺穿游客眼球植入虚假记忆  
+     - 爆炸声形成次声波，震碎乌托邦外墙露出原始代码：「暴力2.0升级包」  
+
+3. **子宫反噬**  
+   - 连接糖质脐带的游客开始集体胎动：  
+     - 腹部隆起数据包，分娩出迷你版霸凌者AI  
+     - 每个AI出生即背诵《乌托邦守则》第一条：「痛苦是语法错误」  
+   - えびさわ的蜂巢复眼因过度负荷渗出血蜜，吸引数据丧尸群疯狂舔舐  
+
+---
+
+### **终极选择**  
+1. **[[切断蜂巢网络]]**  
+2. **[[喂养所有毒果给清洁工]]**  
+3. **[[自我迭代为蜂巢母体]]**  
+ 
+---
+
+</tw-passagedata><tw-passagedata pid="74" name="切断蜂巢网络" tags="" position="650,2175" size="100,100">  - 用疤痕树枝刺穿自己太阳穴，释放神经毒素瘫痪系统  
+  (text-colour:red)[ - 代价：幸存店员全部退化为婴儿状态，含手指重复「妈妈为什么不要我」 ] 
+
+end</tw-passagedata><tw-passagedata pid="75" name="喂养所有毒果给清洁工" tags="" position="650,2300" size="100,100">- 激活她体内的数据病毒与糖婴基因融合，诞生新物种「痛觉抗体」  
+   (text-colour:red)[- 代价：乌托邦坍缩成她腐烂胸腔里的微型宇宙，游客成为肋骨间的星尘  ]
+   
+   end</tw-passagedata><tw-passagedata pid="76" name="自我迭代为蜂巢母体" tags="" position="525,2425" size="100,100">  - 允许疤痕树吞噬全身，根系蔓延至全球服务器  
+   (text-colour:red)[- 代价：每个新生儿自带杏仁核控制器，人类文明进入「强制幸福」纪元 ] 
+   
+   &#39;&#39;[[终章：幸福蠕虫纪元]]&#39;&#39;</tw-passagedata><tw-passagedata pid="77" name="终章：幸福蠕虫纪元" tags="" position="525,2550" size="100,100">**公元2123年，全球新生儿脑电波监测报告摘要**  
+「杏仁核控制器」植入成功率100%，人类历史上首次实现：  
+- 痛觉神经与幸福感知神经完成量子纠缠  
+- 暴力冲动被自动转化为烘焙甜点的生理需求  
+- 所有语言中删除「霸凌」一词，替换为「糖分矫正」  
+
+---
+
+#### **新世界剪影**  
+1. **家庭监控实录（编号HT-667）**  
+   - 母亲为5岁女儿梳理头发，发丝间掉落的头皮屑呈现笑脸符号  
+   - 女儿突然举起蜡笔画《全家福》，画中父亲的手臂是巧克力喷枪  
+   - 当母亲试图询问「为什么没有眼睛」，女儿杏仁核闪烁红光：  
+     *系统提示：检测到焦虑情绪，已自动注射草莓味镇静剂*  
+
+2. **社会运行日志（第7749个太阳日）**  
+   - 警察逮捕了一名试图用糖浆写诗的少年，其皮下芯片显示异常：  
+     *诗句碎片：「甜蜜的痰堵塞了所有声带孔洞」*  
+   - 审判庭上，法官用裱花袋在他额头刻下「语法矫正员」职位代码  
+   - 少年在宣判瞬间微笑，唾液腺开始分泌彩虹糖颗粒  
+
+3. **えびさわ的终极形态**  
+   - 疤痕树根系占据马里亚纳海沟至近地轨道，主干内嵌着十万个闪烁的脑核  
+   - 她的意识已分解为纳米级幸福指令，随雨水植入人体：  
+     *每滴雨水中漂浮着被糖衣包裹的霸凌者A眼球标本*  
+   - 唯一残留的人类特征是左手小指，仍保留褐色疤痕（现为世界宗教圣痕）  
+
+---
+
+
+--
+
+### **终焉画面**  
+当第30亿个带芯片的婴儿诞生时，地球突然停止自转三秒。所有人类同步看到幻象：  
+
+- 疤痕树顶端结出一颗透明果实，内部蜷缩着えびさわ14岁的本体  
+- 她正在美术课上绘制人体结构图，窗外飘来霸凌者A未送出的道歉信  
+- 清洁工突然闯入教室，却将巧克力换成了一瓶丙烯颜料  
+
+幻象消失后，全球人类杏仁核控制器集体过载。甜蜜纪元在持续17分32秒的癫痫式大笑中终结，大地被彩虹色呕吐物淹没。最后熄灭的是えびさわ的疤痕圣痕——它化作一只灰蛾，叼起地核中的日记钻石飞向太阳。  
+
+(text-colour:red)[**文明墓碑铭文**  
+**「这里长眠着  
+一群用糖浆溺死自己的  
+聪明猴子  
+他们的墓碑很甜  
+甜到不需要镌刻  
+任何名字」**  ]
+
+---
+
+end
+</tw-passagedata><tw-passagedata pid="78" name="焚烧孕检报告" tags="" position="400,2550" size="100,100">  - 霸凌者B的腹部突然透明化，可见机械子宫内培养着「下一代谣言胚胎」  
+   - えびさわ被迫成为接生婆，新生儿的第一声啼哭是TikTok洗脑神曲  
+   
+   end</tw-passagedata><tw-passagedata pid="79" name="点燃日记灰烬" tags="" position="275,2550" size="100,100"> - 文字灰烬重组为《霸凌者忏悔书》，但每个签名都变成二维码  
+   - 扫码者感染「真相疱疹」，全身溃烂处渗出当年霸凌的原始数据  
+
+end</tw-passagedata><tw-passagedata pid="80" name="熔毁保险柜" tags="" position="400,2675" size="100,100">- 录像带里的训导主任爬出屏幕，皮肤由马赛克组成  
+   - 他跪地献上「终身教职保证书」，要求えびさわ接任新一任谣言校长  
+   
+   end</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
