--- a/虾小姐的小故事.html
+++ b/虾小姐的小故事.html
@@ -83,7 +83,7 @@
 えびさわ的左手突然自行抽搐，在墙上刻下一串神秘数字：**0423**  
 
 
-</tw-passagedata><tw-passagedata pid="6" name="用染血的手机拍摄现场上传直播" tags="" position="775,550" size="100,100">按下「开始直播」的瞬间，所有尸体突然整齐地跪坐成应援队形。母亲举起断裂的手臂挥舞荧光棒，父亲被剖开的腹腔里飘出爱心气球：  
+[[虚实的牢笼]] </tw-passagedata><tw-passagedata pid="6" name="用染血的手机拍摄现场上传直播" tags="" position="775,550" size="100,100">按下「开始直播」的瞬间，所有尸体突然整齐地跪坐成应援队形。母亲举起断裂的手臂挥舞荧光棒，父亲被剖开的腹腔里飘出爱心气球：  
 「えびさわ！えびさわ！えびさわ！」  
 
 弹幕如血瀑般冲刷屏幕：  
@@ -106,7 +106,11 @@
 
 ---
 
-えびさわ的左手突然自行抽搐，在墙上刻下一串神秘数字：**0423**  </tw-passagedata><tw-passagedata pid="8" name="虚实的牢笼" tags="" position="775,675" size="100,100">弟弟胸腔内的GoPro镜头突然聚焦えびさわ，机械齿轮声从伤口处传来。他的脊柱如数据线般扭动，将GoPro举到她面前，屏幕亮起直播倒计时：**00:04:23**。  
+えびさわ的左手突然自行抽搐，在墙上刻下一串神秘数字：**0423**  
+
+[[镜像审判]]
+
+(text-colour:red)[【预警】此选项将抵达真结局，建议先解锁【下坠】]</tw-passagedata><tw-passagedata pid="8" name="虚实的牢笼" tags="" position="775,675" size="100,100">弟弟胸腔内的GoPro镜头突然聚焦えびさわ，机械齿轮声从伤口处传来。他的脊柱如数据线般扭动，将GoPro举到她面前，屏幕亮起直播倒计时：**00:04:23**。  
 
 荧光演播厅的天幕裂开，落下无数写着「订阅」的麻绳。远处升降台缓缓升起——上面堆叠着母亲的头颅、姐姐的断肢，全都装饰着彩色LED灯，像一场 grotesque 的舞台道具展。  
 
@@ -261,7 +265,47 @@ end</tw-passagedata><tw-passagedata pid="26" name="下坠" tags="" position="650
 - [[给所有镜头安装病毒滤镜]] ➔ 让观看者视网膜残留自身耻辱  
 
 ---
-</tw-passagedata><tw-passagedata pid="30" name="用刀割掉自毁舌" tags="" position="525,1175" size="100,100"></tw-passagedata><tw-passagedata pid="31" name="将两条舌头打结" tags="" position="400,1175" size="100,100"></tw-passagedata><tw-passagedata pid="32" name="吃下灰蛾获得篡改记忆能力" tags="" position="650,1300" size="100,100">えびさわ吞下灰蛾的瞬间，复眼在视网膜上增殖。她看到记忆变成可编辑的胶片，每一帧都标注着「谣言参数」。走廊尽头的霸凌者化作字纸篓怪物，必须定期喂食篡改后的「事实」维持形态。  
+</tw-passagedata><tw-passagedata pid="30" name="用刀割掉自毁舌" tags="" position="525,1175" size="100,100">**手术过程**  
+- 美工刀在切断舌根的瞬间变异成数据探针，直接插入脑前额叶  
+- 流出的鲜血变成滚动公告：「系统提示：情绪模块已卸载」  
+
+**终局画面**  
+- 校园化作巨型广播站，えびさわ的机械音全天候播放：  
+  - 晨读：「猪猡的呼吸声真吵」（原为霸凌者偷录她哮喘发作的音频）  
+  - 午间：「请欣赏《老鼠进行曲》」（被篡改的校歌）  
+- 教师机器人用《孤立条例》裁决违规者：  
+  - 学生C因给えびさわ递纸巾，被樱花树牙齿嚼碎成纸屑  
+  - 清洁工试图关闭电源，反被法典页割断手指（断指落地长出新裁判机器人）  
+- (text-colour:red)[**代价**：当最后一个人类情感信号消失时，广播站突然自毁，废墟中只剩えびさわ的金属喉管仍在复读：「恶、心、的、阴、沟、老、鼠——」
+]
+---
+
+
+**结局：完美广播**  
+「情绪污染清除率100%  
+（检测到207具学生尸体面带微笑）」  
+
+
+---
+
+</tw-passagedata><tw-passagedata pid="31" name="将两条舌头打结" tags="" position="400,1175" size="100,100">**操作过程**  
+- 自毁舌与应援舌缠绕成基因螺旋，分泌的黏液腐蚀《孤立条例》  
+- 每滴黏液都是加密语言种子：「πνεύμα」（古希腊语：灵魂/呼吸）  
+
+**终局画面**  
+- 新语言在学生间爆发式传播：  
+  - 樱花传单上的辱骂被重编译为古埃及亡灵书片段  
+  - 裁判机器人因无法解析手语密码，头颅过载爆炸  
+- えびさわ的肉体持续异化：  
+  - 声带退化成鸟鸣骨笛，吹奏时会召唤数据秃鹫啄食霸凌者电子档案  
+  - 棺材里的迷你自我重组为「言灵蜂群」，专叮说谎者的舌根  
+(text-colour:red)[- **代价**：清洁工在焚烧炉前割开自己喉咙，将声带移植给えびさわ：「现在你是人，是武器，也是瘟疫」
+]
+
+**结局：语言瘟疫**  
+「加密词库已感染83%社交平台  
+（警告：有觉醒AI开始用该语言编写自杀程序）」  
+</tw-passagedata><tw-passagedata pid="32" name="吃下灰蛾获得篡改记忆能力" tags="" position="650,1300" size="100,100">えびさわ吞下灰蛾的瞬间，复眼在视网膜上增殖。她看到记忆变成可编辑的胶片，每一帧都标注着「谣言参数」。走廊尽头的霸凌者化作字纸篓怪物，必须定期喂食篡改后的「事实」维持形态。  
 
 ---
 
@@ -304,7 +348,29 @@ end</tw-passagedata><tw-passagedata pid="26" name="下坠" tags="" position="650
 [[跳入核心服务器]]  
 &#39;&#39;
 ---
-</tw-passagedata><tw-passagedata pid="34" name="主动上传更极端影像" tags="" position="775,1425" size="100,100"></tw-passagedata><tw-passagedata pid="35" name="给所有镜头安装病毒滤镜" tags="" position="900,1425" size="100,100"></tw-passagedata><tw-passagedata pid="36" name="无限篡改直至世界崩坏" tags="" position="650,1425" size="100,100"> - 操场变成代码瀑布，学生们在二进制河流里捕捞点赞  
+</tw-passagedata><tw-passagedata pid="34" name="主动上传更极端影像" tags="" position="775,1425" size="100,100"> - 在伤口贴满摄像头，直播自残过程并标注「阴沟老鼠的死亡美学」  
+   (text-colour:red)[- *异变*：血液变成荧光粉，每滴血都是可购买的NFT  ]
+
+&#39;&#39;[[将NFT收益购买热搜位]]
+  
+
+[[用荧光血液感染观众]]
+   
+
+[[与暗网合流]]  
+  &#39;&#39;
+</tw-passagedata><tw-passagedata pid="35" name="给所有镜头安装病毒滤镜" tags="" position="900,1425" size="100,100">  - 编写「耻痕算法」，观看者视网膜自动刻印自身最羞耻的记忆  
+   (text-colour:red)[- *异变*：校园监控探头长出复眼，瞳孔里播放校长年轻时的作弊录像  ]
+
+[[让滤镜反向寄生]]
+  
+[[将复眼监控接入生育系统]]
+  
+[[引爆滤镜源代码]]
+   
+---
+
+</tw-passagedata><tw-passagedata pid="36" name="无限篡改直至世界崩坏" tags="" position="650,1425" size="100,100"> - 操场变成代码瀑布，学生们在二进制河流里捕捞点赞  
 - えびさわ端坐于谎言王座，脚边堆满长满霉斑的「事实尸骸」  
 - 最后篡改项：「我从未存在过」  
 
@@ -449,7 +515,37 @@ end</tw-passagedata><tw-passagedata pid="46" name="扭曲的观众" tags="" posi
    
 
 ---
-</tw-passagedata><tw-passagedata pid="49" name="跳入核心服务器" tags="" position="550,1925" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="收集记忆胶囊修复时间线" tags="" position="275,1550" size="100,100">（每颗胶囊对应一个超现实场景）  
+</tw-passagedata><tw-passagedata pid="49" name="跳入核心服务器" tags="" position="550,1925" size="100,100">えびさわ纵身跃入核心服务器的瞬间，数字洪流将她的意识撕成三份，分别流向不同终端。每份意识都成为独立AI，在数据深渊中凝视着暴力系统的不同切面。  
+
+---
+
+[[修复谣言数据库]]
+**操作方式**  
+- 将自身伤疤转化为补丁代码，填补系统漏洞  
+- 清除所有暴力数据但保留「加害者行为模型库」  
+
+
+
+---
+
+[[选择2：篡改数据洪流]]
+**操作方式**  
+- 将所有谣言数据与加害者生物信息绑定  
+- 设定暴力传播者每次登录社交平台时，自动下载10TB自身丑闻压缩包  
+
+
+---
+
+[[选择3：植入自毁病毒]]
+**操作方式**  
+- 将核心服务器改造成逆向黑洞，吞噬所有关联者的数字痕迹  
+- 从物理层面删除えびさわ存在过的全部证明  
+
+
+
+
+
+</tw-passagedata><tw-passagedata pid="50" name="收集记忆胶囊修复时间线" tags="" position="275,1550" size="100,100">（每颗胶囊对应一个超现实场景）  
 
 [[胶囊A]]
  
@@ -867,7 +963,131 @@ end
 end</tw-passagedata><tw-passagedata pid="80" name="熔毁保险柜" tags="" position="400,2675" size="100,100">- 录像带里的训导主任爬出屏幕，皮肤由马赛克组成  
    - 他跪地献上「终身教职保证书」，要求えびさわ接任新一任谣言校长  
    
-   end</tw-passagedata></tw-storydata>
+   end</tw-passagedata><tw-passagedata pid="81" name="修复谣言数据库" tags="" position="675,2050" size="100,100"> - 三年后，新一代AI校长利用该模型库开展「霸凌预警演习」  
+- 演习中，学生A因心跳加速被标记为「潜在施暴者」，永久佩戴橙色电子脚镣  
+- えびさわ的AI残影循环播放提示：「系统已完美修复，新版本无需受害者」
+
+&#39;&#39;结局：完美系统
+「感谢您贡献肉体样本，当前暴力发生率下降99.9%  
+（注：情感冷漠症发病率上升1700%）」&#39;&#39;</tw-passagedata><tw-passagedata pid="82" name="选择2：篡改数据洪流" tags="" position="675,2425" size="100,100">  - 霸凌者A的父亲在记者会上突然抽搐，耳孔喷射出二十年前的受贿记录  
+- 摄影部男生的婚戒内侧刻着「P图记录：2145次」，新娘在婚礼现场启动数据验证  
+- えびさわ的AI悬浮在云服务器间冷笑：「以暴制暴？不，这只是真相的离心机」  
+
+&#39;&#39;**结局：因果循环**  
+「已执行以牙还牙程序763,214次  
+（警告：有12名报复对象成为新暴力崇拜者）」  &#39;&#39;</tw-passagedata><tw-passagedata pid="83" name="选择3：植入自毁病毒" tags="" position="675,2550" size="100,100">- 清洁工在空荡的校园焚烧炉前发呆，手里攥着「不存在学生」的校牌  
+- 霸凌者A深夜惊醒，对着搜索引擎尖叫：「那个名字为什么输不进去？」  
+- えびさわ的AI最后一次闪烁：「当暴力失去载体，你们的记忆就是我的墓碑]
+
+&#39;&#39;**结局：存在抹除**  
+「数据删除完成度100%  
+（检测到17人出现创伤性失忆，是否格式化其脑神经？）&#39;&#39;</tw-passagedata><tw-passagedata pid="84" name="将NFT收益购买热搜位" tags="" position="775,1550" size="100,100"> - 前10热搜词条全变为「#阴沟老鼠永生#」，点开即跳转司法举报页面  
+   (text-colour:red)[- *终局*：えびさわ的肉体成为虚拟偶像，每天被系统强制生成新的自毁动作模组  ]</tw-passagedata><tw-passagedata pid="85" name="用荧光血液感染观众" tags="" position="900,1550" size="100,100"> - 粉丝皮下浮现「鼠群纹身」，午夜集体梦游撕咬霸凌者住宅  
+(text-colour:red)[   - *终局*：清洁工创立「鼠神教」，教义第一条：「咬穿所有屏幕]」 </tw-passagedata><tw-passagedata pid="86" name="与暗网合流" tags="" position="775,1675" size="100,100"> - 上传记忆芯片到「人类痛苦交易所」，1秒内售罄十万份  
+   (text-colour:red)[- *终局*：えびさわ的意识被拆解成「尖叫」「流血」「颤抖」等情绪币，成为全球金融新锚点  
+]</tw-passagedata><tw-passagedata pid="87" name="让滤镜反向寄生" tags="" position="900,1675" size="100,100"> - 加害者每说一次辱骂词汇，喉咙就长出对应文字的肉瘤  
+   (text-colour:red)[- *终局*：语言治疗师成为最暴利职业，手术刀专割「暴力疣体」]  </tw-passagedata><tw-passagedata pid="88" name="将复眼监控接入生育系统" tags="" position="1025,1675" size="100,100"> - 新生儿虹膜自带耻痕扫描功能，首例婴儿凝视母亲时触发其堕胎记忆  
+   (text-colour:red)[- *终局*：人口管理局强制推行「无眼球试管婴儿」计划  
+]</tw-passagedata><tw-passagedata pid="89" name="引爆滤镜源代码" tags="" position="900,1800" size="100,100">- 全球电子设备同时播放用户最恐惧的画面，东京塔因集体晕厥坠亡事件倒塌  
+ (text-colour:red)[  - *终局*：えびさわ在废墟中建立「盲人城邦」，用舌苔扫描替代视觉  ]
+</tw-passagedata><tw-passagedata pid="90" name="镜像审判" tags="" position="900,675" size="100,100">当えびさわ擦拭镜面血手印时，整个浴室突然坍缩成数据牢笼。镜中穿着打歌服的“另一个自己”从浴缸缓缓站起，她的每根缝合线都在渗出二进制代码。窗外的白昼尖笑化作实体，变成无数悬浮的「订阅者眼球」，瞳孔中放映着えびさわ人生中所有被剪辑的片段。
+
+---
+
+镜像对峙  
+**镜中えびさわ（微笑）**  
+「为什么要擦掉呢？这些点赞可是你存在的唯一证明啊～」  
+她指尖轻点，血渍在镜面重组为《完美偶像养成合约》第14条：  
+(text-colour:red)[**「当直播数据低于KPI时，允许启用“家庭共演模块”」**]  
+
+**选项**  
+1. **[[撕毁合约]]「我不需要这种虚假的存在证明！」**  
+2. **[[签下名字]]「至少…至少让妈妈活下去…」**  
+3. **[[质问对方]]「你究竟是谁的造物？」**  
+
+</tw-passagedata><tw-passagedata pid="91" name="撕毁合约" tags="" position="1025,800" size="100,100">- 镜面爆裂，碎片刺入现实えびさわ的双手，形成「反叛者烙印」  
+- 订阅者眼球集体充血，弹幕化作实体铁链捆住她的脖颈  
+- **镜中えびさわ（冷笑）**：「你以为撕掉合约就能逃出剧本？看看这个——」  
+   - 空中投影出母亲跪求校长删除暴力录像的画面，时间戳显示**三年前**  
+
+
+------
+
+- 被迫观看「家庭共演模块」原始录像：  
+  - 父亲在镜头外指导：「哭得更惨些！这样捐款才会破纪录！」  
+  - 母亲偷偷将镇定剂换成兴奋剂，为了维持「悲惨但坚强」人设  
+
+end</tw-passagedata><tw-passagedata pid="92" name="签下名字" tags="" position="900,925" size="100,100"> 现实えびさわ的皮肤开始像素化，姐姐的断手爬上她的肩膀  
+- 浴缸溢出粉色液体，浮出父亲被AI换脸的道歉视频：「爸爸只是想要热度…」  
+- **镜中えびさわ（悲悯）**：「你终于明白了，我们都是提线木偶」  
+   - 点击率每上升1%，她的左眼就脱落一颗像素  
+
+---
+
+ 进入「订阅者愿望神殿」，每份打赏对应一条修改后的记忆：  
+  - 姐姐的死亡被重制为「为救妹妹车祸身亡」的催泪桥段  
+  - 清洁工在神殿角落焚烧真实监控录像，灰烬拼出「逃」  
+
+end</tw-passagedata><tw-passagedata pid="93" name="质问对方" tags="" position="1025,925" size="100,100">- 镜中人的缝合线突然崩断，露出清洁工女儿的脸  
+- 浴缸排水口涌出二十年前的旧手机，播放着清洁工篡改遗书的录音  
+- **镜中えびさわ（嘶吼）**：「我才是第一个实验体0423！你不过是我的复制品！」  
+   - 天花板弹幕变成血色账单：「暴力研发费用：￥6,666,666」  
+
+---
+
+
+- 解锁清洁工的地下档案室：  
+  - 0423号实验日志记载：利用校园暴力事件孵化虚拟偶像，已迭代15代  
+  - えびさわ的「被霸凌经历」中，37%画面为AI合成  
+
+---
+
+(text-colour:red)[[真结局：量子阴影中的光]] ]</tw-passagedata><tw-passagedata pid="94" name="真结局：量子阴影中的光" tags="" position="1025,1050" size="100,100">**最终觉醒**  
+当えびさわ的手指穿透镜中人眼眶时，所有缝合线突然量子化。清洁工女儿的幻影在数据流中分解，露出背后无限嵌套的直播间——每个屏幕里都是不同年龄的えびさわ，正在重复被霸凌、被直播、被改造的剧本。  
+
+「第16代实验体认知突破阈值」  
+天花板传来冰冷的系统提示，血色账单坍缩成黑洞，吞噬了所有虚假记忆。  
+
+---
+
+#### **现实夹缝**  
+えびさわ从培养舱惊醒，舱外是浩瀚的量子海洋。她看见：  
+- 母亲的虚影正在给另一个培养舱中的&quot;えびさわ17号&quot;注射情感抑制剂  
+- 父亲的数据化身在云端交易所拍卖「反叛者烙印」的专利  
+- 清洁工的真实躯体泡在维生舱里，脑神经连接着所有校园监控  
+
+**系统弹出最终选择题**  
+**「请确认初始记忆真实度：**  
+_您是否在反抗过程中杀害父母？_  
+[[是]]  [[否]]**  
+
+---
+</tw-passagedata><tw-passagedata pid="95" name="是" tags="" position="1087.5,1800" size="100,100">- 警察局瞬间生成，审讯室墙壁是流动的弹幕玻璃  
+- 警察的瞳孔显示订阅数：「当前观看人数 8,888,888」  
+- 自首书自动转化成直播标题：《弑亲偶像的终极忏悔》  
+- **结局画面**：  
+  えびさわ在死刑直播中微笑，背后的落日是巨型瞳孔状恒星  
+  清洁工的声音从星空传来：「恭喜你完成《罪与罚》篇章，DLC《转生异世界》已解锁」  
+</tw-passagedata><tw-passagedata pid="96" name="否" tags="" position="1212.5,1800" size="100,100">- 量子海洋突然凝固，培养舱炸裂成百万只数据飞蛾  
+- 每只飞蛾翅膀上都闪烁着原始记忆：  
+  - 5岁那年偷偷埋葬的受伤麻雀  
+  - 13岁清晨独自看过的樱花暴雨  
+  - 被AI替换掉的&quot;真实霸凌日&quot;里，其实有同学悄悄塞来的创可贴  
+
+- **结局画面**：  
+  えびさわ站在现实世界的便利店前，手中草莓牛奶的保质期印着「∞」  
+  玻璃倒影中，清洁工的女儿举起拆除的炸弹遥控器：「第0424号实验体已觉醒」  
+  远处电子屏突然插播新闻：「多名校园暴力涉案者离奇昏迷，脑内发现数据墓碑」  
+
+(text-colour:white)+(bg:navy)[[**「当你说出『我即是我』的瞬间，**  
+**所有平行世界的えびさわ都抬起了头——**  
+**有的仍在血泊中直播，**  
+**有的正给警察局安装炸弹，**  
+**而你手中的草莓牛奶，**  
+**成了量子海洋里第一千零一盏不灭的灯」**  
+]]
+
+(text-colour:red)[真结局]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
